WeeChat - Wee Enhanced Environment for Chat
===========================================

ChangeLog - 2005-02-12


Version 0.1.1 (under dev!):
   * on server buffer, only server messages are logged
   * plugins messages are logged with new config option (log_plugin_msg)

Version 0.1.0 (2005-02-12):
   * improved /window command: now split and merge are ok
   * away nicks are now displayed with another color (new option: "irc_away_check")
   * added away indicator in status bar
   * added lag indicator (and auto-disconnect after a delay if important lag)
   * improved completion: now completes commands arguments (IRC and internal),
     when only one completion matches, completion mechanism is stoped (to
     complete command arg for example)
   * improved /set command: empty strings are allowed, new colors, server
     options can be changed while WeeChat is running
   * added default away/part/quit messages in config file
   * new [irc] section in config file, option "look_display_away" moved to
     "irc_display_away"
   * server messages & errors are all prefixed (by 3 chars, like '-@-')
   * added new options for charset (UTF-8 support): look_charset_decode,
     look_charset_encode and look_charset_internal
   * fixed many memory leaks
   * fixed colors bug: removed "gray" color (replaced by "default"), colors are
     ok when terminal has white (or light) background
   * fixed crash when resizing terminal to small size
   * fixed crash when multiple servers and big messages received from server
   * fixed crash when closing some private buffers
   * fixed crash when unknown section with option(s) in config file
   * fixed /op, /deop, /voice, /devoice (now ok with many nicks)
   * fixed /me command (now ok without parameter)
   * fixed /away command (now ok if not away)
   * logs are now disabled by default (server/channel/private)

Version 0.0.9 (2005-01-01):
   * auto-reconnection to server (new options: server_autoreconnect (on/off),